--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>❤Dubem's Website</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <img src="images/pfp.jpg" alt="picture of chidubem" height="500px" width="400px">
